# adjointGSIS_2D3VEL

./: .gitignore  CMakeLists.txt  README.md  log  make.sh  mpirun.sh  run.sh
cases/demo/: config.ini
cases/demo/mesh/: 4w.cas
src/: main.cpp
src/app/: app.cpp  app.h  readConfig.cpp  readMesh.cpp
src/core/: config.cpp  config.h  defs.h  object.cpp  object.h  profiler.h  timer.hpp  utils.cpp  utils.h
src/dvm/: adjointDVM.cpp  adjointDVM.h  boundary_sensitivity.cpp  boundary_sensitivity.h  dvmSolver.cpp  dvmSolver.h  object.hpp  object1.hpp  velocitySpace.cpp  velocitySpace.h
src/io/: output.cpp  output.h
src/mesh/: checkMesh.hpp  computeGeometry.cpp  computeGeometry.h  halo.cpp  halo.h  mesh.cpp  mesh.h  meshDeform.cpp  partition.cpp  partition.h
src/optimization/: optimize_driver.cpp  optimize_driver.h  optimizer.h
src/sensitivity/: boundary_sensitivity.cpp  boundary_sensitivity.h
src/shape/: meshDeform.cpp  meshDeform.h  parameterization.h
src/test/: adjoint_validation.cpp  adjoint_validation.h  geom_chain_validation.cpp  geom_chain_validation.h  lsq_validation.cpp  lsq_validation.h
